<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>realisticvillagers-core</artifactId>
    <packaging>jar</packaging>
    <parent>
        <groupId>me.matsubara</groupId>
        <artifactId>realisticvillagers-parent</artifactId>
        <version>3.3.3.6</version>
    </parent>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.4-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>net.wesjd</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.tchristofferson</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.jsoup</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util.jsoup</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.mineskin</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util.mineskin</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.cryptomorin</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.tcoded.folialib</pattern>
                                    <shadedPattern>me.matsubara.realisticvillagers.util.folialib</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/**</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>com.github.cryptomorin:XSeries</artifact>
                                    <includes>
                                        <include>com/cryptomorin/xseries/reflection/**</include>
                                        <include>com/cryptomorin/xseries/particles/XParticle*</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>net.wesjd:anvilgui</artifact>
                                    <excludes>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_7*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_8*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_9*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_10*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_11*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_12*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_13*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_14*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_15*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_16*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_17*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_18_R1*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_19_R1*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/Wrapper1_19_R2*</exclude>
                                        <exclude>net/wesjd/anvilgui/version/special/*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <!-- Paper Repository -->
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>tcoded-releases</id>
            <url>https://repo.tcoded.com/releases</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- SpigotAPI -->
        <!-- Unfortunately, we need to stick with 1.20.4 to prevent backward compatibility issues. -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Paper API for 1.21.8 Dialog support -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- AnvilGUI -->
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.8-SNAPSHOT</version>
        </dependency>
        <!-- ConfigUpdater -->
        <dependency>
            <groupId>com.tchristofferson</groupId>
            <artifactId>ConfigUpdater</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <!-- AuthLib -->
        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>3.17.30</version>
            <scope>provided</scope>
        </dependency>
        <!-- Mineskin -->
        <dependency>
            <groupId>com.github.aematsubara</groupId>
            <artifactId>MineskinClient</artifactId>
            <!--suppress MavenModelInspection -->
            <version>master-SNAPSHOT</version>
        </dependency>
        <!-- EliteMobs -->
        <dependency>
            <groupId>com.magmaguy</groupId>
            <artifactId>EliteMobs</artifactId>
            <version>8.7.4-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- VTL -->
        <dependency>
            <groupId>com.github.PretzelJohn</groupId>
            <artifactId>VillagerTradeLimiter</artifactId>
            <version>1.5.6</version>
            <scope>provided</scope>
        </dependency>
        <!-- ViaVersion -->
        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>viaversion-api</artifactId>
            <version>4.7.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- XSeries -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>11.2.0.1</version>
        </dependency>
        <!-- PacketEvents -->
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.9.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- FoliaLib -->
        <dependency>
            <groupId>com.tcoded</groupId>
            <artifactId>FoliaLib</artifactId>
            <version>0.5.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>